[project]
name = "comfyliterals"
description = "Nodes: Int, Float, String, Operation, Checkpoint"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/M1kep/ComfyLiterals"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyLiterals"
Icon = ""
